RESOLVED FIXED302323
[blocks-in-inline] Include blocks in getBoundingClientRect for inline box
https://bugs.webkit.org/show_bug.cgi?id=302323
Summary [blocks-in-inline] Include blocks in getBoundingClientRect for inline box
Antti Koivisto
Reported 2025-11-11 03:47:16 PST
Expected behavior tested by css/CSS2/normal-flow/block-in-inline-client-rects-001.html
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-11 03:47:37 PST
Antti Koivisto
Comment 2 2025-11-11 03:53:03 PST
EWS
Comment 3 2025-11-12 04:22:04 PST
Committed 302904@main (543b61df8c72): <https://commits.webkit.org/302904@main> Reviewed commits have been landed. Closing PR #53738 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.