[blocks-in-inline] Include blocks in getBoundingClientRect for inline box https://bugs.webkit.org/show_bug.cgi?id=302323 rdar://164470525

Reviewed by Alan Baradlay.

This is the expected behavior tested by for example css/CSS2/normal-flow/block-in-inline-client-rects-001.html

* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContent.h:
(WebCore::LayoutIntegration::InlineContent::traverseDescendantBlockLevelBoxes):

Add a helper.

* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::inkOverflowBoundingBoxRectFor const):
(WebCore::LayoutIntegration::LineLayout::collectInlineBoxRects const):

Include the contained blocks along with the inline boxes.

* Source/WebCore/layout/layouttree/LayoutBox.cpp:
(WebCore::Layout::Box::isDescendantOf const):

Fix this to do what it says. The only client doesn't mind.

(WebCore::Layout::Box::isDescendantOfWithinFormattingContext const):

Add a version that bails out faster.

* Source/WebCore/layout/layouttree/LayoutBox.h:

Canonical link: https://commits.webkit.org/302904@main