Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContent.h
@@ -89,6 +89,7 @@ public:
     std::optional<size_t> firstBoxIndexForLayoutBox(const Layout::Box&) const;
 
     template<typename Function> void traverseNonRootInlineBoxes(const Layout::Box&, Function&&);
+    template<typename Function> void traverseDescendantBlockLevelBoxes(const Layout::Box&, Function&&);
 
     const RenderBlockFlow& formattingContextRoot() const;
 
@@ -136,6 +137,21 @@ template<typename Function> void InlineContent::traverseNonRootInlineBoxes(const
 {
     for (auto index : nonRootInlineBoxIndexesForLayoutBox(layoutBox))
         function(displayContent().boxes[index]);
+}
+
+template<typename Function> void InlineContent::traverseDescendantBlockLevelBoxes(const Layout::Box& ancestor, Function&& function)
+{
+    if (!m_hasBlockLevelBoxes)
+        return;
+
+    for (auto& box : m_displayContent.boxes) {
+        if (!box.isBlockLevelBox())
+            continue;
+        CheckedRef layoutBox = box.layoutBox();
+        if (!layoutBox->isDescendantOfWithinFormattingContext(ancestor))
+            continue;
+        function(box);
+    }
 }
 
 }
