Source/WebCore/layout/layouttree/LayoutBox.h
@@ -166,7 +166,8 @@ public:
     const Box* previousInFlowSibling() const;
     const Box* previousInFlowOrFloatingSibling() const;
     const Box* previousOutOfFlowSibling() const;
-    bool isDescendantOf(const ElementBox&) const;
+    bool isDescendantOf(const Box&) const;
+    bool isDescendantOfWithinFormattingContext(const Box&) const;
     bool isInFormattingContextEstablishedBy(const ElementBox& formattingContextRoot) const;
 
     // FIXME: This is currently needed for style updates.
